# uri-template-system

./: .gitmodules  .justfile  Cargo.toml  README.md  SECURITY.md  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
core/: Cargo.toml  README.md  build.rs
core/benches/: comparison.rs  optimisation.rs
core/examples/: simple.rs
core/src/: codec.rs  common.rs  encode.rs  expand.rs  expansion.rs  expression.rs  lib.rs  literal.rs  parse.rs  satisfy.rs  string.rs  template.rs  uri_template.rs  util.rs  value.rs
core/src/action/: encode.rs  expand.rs  satisfy.rs
core/src/codec/: encode.rs
core/src/common/: matcher.rs
core/src/expression/: encode.rs  expand.rs  parse.rs
core/src/expression/expand/: string.rs  value.rs  values.rs
core/src/literal/: expand.rs  parse.rs
core/src/model/: template.rs  value.rs
core/src/model/template/: component.rs
core/src/model/template/component/: expression.rs  literal.rs
core/src/model/template/component/expression/: modifier.rs  operator.rs  variable.rs
core/src/process/: expand.rs  parse.rs
core/src/string/: encode.rs  satisfy.rs
core/src/string/satisfy/: tuple_2.rs  tuple_3.rs
core/src/template/: common.rs  component.rs  expand.rs  expression.rs  literal.rs  parse.rs
core/src/template/component/: expression.rs  literal.rs
core/src/template/component/expression/: modifier.rs  operator.rs  variable.rs  variable_list.rs  variable_name.rs  variable_specification.rs
core/src/template/component/expression/modifier/: explode.rs  prefix.rs
core/src/template/component/expression/operator/: op_level_2.rs  op_level_3.rs
core/src/template/component/expression/operator/op_level_2/: fragment.rs  reserved.rs
core/src/template/component/expression/operator/op_level_3/: label.rs  path.rs  path_parameter.rs  query.rs  query_continuation.rs
core/src/template/expression/: modifier.rs  operator.rs  var_spec.rs  variable_list.rs  variable_name.rs  variable_specification.rs
core/src/template/expression/modifier/: explode.rs  prefix.rs
core/src/template/expression/operator/: none.rs  op_level_2.rs  op_level_3.rs  op_reserve.rs
core/src/template/expression/operator/op_level_2/: fragment.rs  reserved.rs
core/src/template/expression/operator/op_level_3/: label.rs  path.rs  path_parameter.rs  query.rs  query_continuation.rs
core/src/uri_template/: common.rs  expression.rs  literal.rs
core/src/uri_template/expression/: parse.rs
core/src/uri_template/literal/: parse.rs
core/src/util/: encode.rs  satisfy.rs
core/src/util/satisfy/: ascii.rs  composite.rs  percent_encoded.rs  tuple.rs  unicode.rs
core/src/util/satisfy/composite/: composite2.rs  composite3.rs
core/src/util/satisfy/tuple/: tuple_2.rs  tuple_3.rs
core/tests/: expansion.rs  process.rs
experiments/: Cargo.toml
experiments/src/: main.rs
fixtures/: Cargo.toml
fixtures/src/: lib.rs
meta/: Cargo.toml  README.md
meta/src/: lib.rs
tests/: Cargo.toml  README.md
tests/benches/: comparison.rs  optimisation.rs
tests/src/: fixtures.rs  harnesses.rs  lib.rs
tests/src/harnesses/: iri_string.rs  uri_template_next.rs  uri_template_system.rs
tests/tests/: expansion.rs
