[workspace]
members = ["core", "fixtures"]

[workspace.dependencies]
anyhow = "1"
criterion = "0.5"
fnv = "1"
indexmap = { version = "2", features = ["serde"] }
nom = "7"
nom-supreme = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"

[workspace.package]
authors = ["Andrew Cherry (kolektiv)"]
categories = [
  "data-structures",
  "network-programming",
  "parser-implementations",
  "template-engine",
  "web-programming",
]
documentation = "https://docs.rs/uri-template-system"
edition = "2021"
homepage = "https://github.com/kolektiv/uri-template-system"
license = "AGPL-3.0-only"
readme = "README.md"
version = "0.1.0"
