[package]
name = "uri-template-system-core"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
fnv = "1"
paste = "1"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
