[package]
name = "uri-template-system-core"
authors.workspace = true
categories.workspace = true
description = "URI Template System Core (prefer top-level URI Template System)"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
version.workspace = true

[dependencies]
fnv = "1"
paste = "1"
thiserror = "1"
