[package]
name = "uri-template-system"
authors.workspace = true
categories.workspace = true
description = "URI Template (RFC 6570) parsing, expansion and matching"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
version.workspace = true

[dependencies]
uri-template-system-core = { path = "../core", version = "0.1.3" }
